# ChangeLog for sci-biology/ncbi-tools
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/ncbi-tools/ChangeLog,v 1.62 2008/04/22 00:22:03 ribosome Exp $

  22 Apr 2008; Olivier Fisette <ribosome@gentoo.org>
  -ncbi-tools-20050605.ebuild, ncbi-tools-20080302.ebuild:
  Pruned old version. Added 20080302 to x86 and amd64 (fixes bug #218233).

*ncbi-tools-20080302 (15 Apr 2008)

  15 Apr 2008; Jeff Gardner <je_fro@gentoo.org> +ncbi-tools-20080302.ebuild:
  Latest release from NCBI.

  08 Apr 2008; Donnie Berkholz <dberkholz@gentoo.org>; Manifest:
  Fix manifest, connection dropped mid-commit.

  08 Apr 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  ncbi-tools-20070826.ebuild:
  (#195251) Fix build with --as-needed by always linking against dynamic
  libraries (Till Korten).

  08 Apr 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  ncbi-tools-20070826.ebuild:
  Respect CFLAGS and compiler on 64-bit systems. Apparently I'm the only
  person on amd64 who actually watches it build. =)

  31 Dec 2007; Jeff Gardner <je_fro@gentoo.org> ChangeLog:
  fixing my email address

  19 Oct 2007; Jeff Gardner <je_fro@gentoo.org> ncbi-tools-20070826.ebuild:
  Commenting out any reference to USE=mpi, which is currently broken (bug
  #196466).

  14 Oct 2007; Jeff Gardner <je_fro@gentoo.org> ncbi-tools-20070826.ebuild:
  Commented out a stray reference to mpi that I missed the first time.

  13 Oct 2007; <je_fro@gentoo.org> ncbi-tools-20050605.ebuild,
  +ncbi-tools-20070826.ebuild:
  Added quotes to make repoman happy.

*ncbi-tools-20070826 (13 Oct 2007)

  13 Oct 2007; <je_fro@gentoo.org> +ncbi-tools-20070826.ebuild:
  New version - mpiblast compilation broken at present.

  05 Jun 2007; Raúl Porcel <armin76@gentoo.org> ncbi-tools-20060507.ebuild:
  alpha stable wrt #152292

  10 Mar 2007; Olivier Fisette <ribosome@gentoo.org>
  +files/ncbi-tools-extra_vib.patch: