@@ -9,9 +9,9 @@ DIST ncbi-tools-20061015.tar.gz 15772715 RMD160 034124b92d4320be31b2bacbb0966270
 DIST ncbi-tools-20070826.tar.gz 17076175 RMD160 00daadd503bf729c15ada0008e305492a076fe15 SHA1 5e61f4f73ef52d145d0df86bb00f03f2db833ee9 SHA256 58be3bb76c4a112217c414fd5d05de58a893cfd6ace3856629616a97a61ee4c8
 DIST ncbi-tools-20080302.tar.gz 17294669 RMD160 e269bcadc9e498163252e348a314bab8d0ece8f6 SHA1 d91a66bafac62dd07cc2e524874492388e5a780d SHA256 93a30ec0a6e408858c6364039a4eb240d9fadaf8ce670a14151e03c5169a12c1
 DIST ncbi-tools-sdk-doc.tar.bz2 263568 RMD160 f9c4d610c2535ec2b4afae6ecef065fd5746910b SHA1 6fd259b1fc75684db43bd817fc4720e92f56e81c SHA256 352ec02e527f24d03bafb7d40b31c98e0a6f931bed34c4933c5f7153b8034cb2
-EBUILD ncbi-tools-20060507.ebuild 6438 RMD160 6877a4730d39b7affb7c19fd30fb0128d3775e55 SHA1 92a12913a828d98609057ae060359de658d251c3 SHA256 a19fa158236ba76a0c2b335163b6db4774ebc0d8b0190b16842b19d024567ff4
-EBUILD ncbi-tools-20061015-r1.ebuild 6521 RMD160 891077948e93ff734dabc0ea9cdd4fc395dfc833 SHA1 f7334ea3f9f1f6be85a67dc4b376a61058cefe8a SHA256 a5f51f5eae2b85cf83fdb66e3753630b5cdb195887001e68adfb2b0557e4e958
-EBUILD ncbi-tools-20070826.ebuild 7149 RMD160 056fab4e28cb5b18bed0255a4aa59130247d78eb SHA1 e66be87337591e3660445b319257a0456e410ac3 SHA256 97d26fb7cedcf3c41c06905c9a00a1e75481a7fb4fe1dc462d6009bc50659285
-EBUILD ncbi-tools-20080302.ebuild 7148 RMD160 32225f4c587c692b7621ac6d0780a45613de6a94 SHA1 54c19b63d4c174fe881d2bd6de2169d26d2d81cf SHA256 9ed1e1efdb7d652c4f165963334faf18947f152c88782eadf1b1c23e4117ef66
-MISC ChangeLog 13574 RMD160 435bb85c6cf86df68b2b0556eaf8e0fa2e3185e2 SHA1 004b1c7ccb55e16b5ba8b7dd9381cccf1d91a2ce SHA256 cd7003ed5a11fb69c958e68e59796fa62120fdb2d5c9b1967486977b297bcfc6
+EBUILD ncbi-tools-20060507.ebuild 6458 RMD160 271a26e24c6b72af6fe7541a80a6d6af0b4ab21c SHA1 af2a0c2e603cdc712c7cf79109c7f2c3e9e40e58 SHA256 76ad9392e2f938c50086c118477deb8993bdf88147c6bc691c8a1418fdacf691
+EBUILD ncbi-tools-20061015-r1.ebuild 6540 RMD160 d124cce8a7217d05364774cebfca7d6c21057576 SHA1 dd0b0792e21b5b14c6cd03b2e72af0a5a7ceb7d7 SHA256 70a215a085dbab710e0949e099114a45bfb0d1da3cb7f0784664820e464fd6d9
+EBUILD ncbi-tools-20070826.ebuild 7167 RMD160 59fc1ec17c228b77a3213d113c7e67baed3fe211 SHA1 2036ac260ac973fafbd51997a393af113da7d0c1 SHA256 74931a35f741a38c1a4e3489d13c870c812865546223c4c0fff0a32206fe40f7
+EBUILD ncbi-tools-20080302.ebuild 7169 RMD160 76b25acd00737b9be7d85a054b4f91c0d8fa7f2b SHA1 eea52b61477e29b156fc0ad5eeccbe9a66d7ec95 SHA256 58f6ab21ef53fd91c070ebfcf8bf110c959876db6151c2fd3164be019ac8c392
+MISC ChangeLog 13674 RMD160 fa407c93f3f9fdc84c18eca88d8817a43af9c9cd SHA1 151fc5227bf07f31db22b61e32efa689dc797b07 SHA256 c87804e1b891d9b7f1e999c2a71f31a74801d72c85b971d4b38e399ee1ae19bc
 MISC metadata.xml 262 RMD160 4eabcbcb990d4d5e3b34db8c27bcd2c0cfcf7501 SHA1 3c024ca60a2b93ed0e0311f6b05ef5ef117bee31 SHA256 89af818a993faf14a4a87e2f254943420156c2a317c385480a9533ba682b650f
