@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/ncbi-tools/ncbi-tools-20070826.ebuild,v 1.5 2008/04/08 21:29:59 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/ncbi-tools/ncbi-tools-20070826.ebuild,v 1.6 2008/05/12 00:04:15 je_fro Exp $
 
 EAPI="prefix"
 
@@ -26,8 +26,10 @@ IUSE="doc X"
 DEPEND="app-shells/tcsh
 	dev-lang/perl
 	media-libs/libpng
-	sys-devel/pmake
 	X? ( virtual/motif )"
+
+DEPEND="${RDEPEND}
+	sys-devel/pmake"
 
 #	mpi? ( virtual/mpi )
 
