@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/ncbi-tools/ncbi-tools-20080302.ebuild,v 1.2 2008/04/22 00:22:03 ribosome Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/ncbi-tools/ncbi-tools-20080302.ebuild,v 1.3 2008/05/12 00:04:15 je_fro Exp $
 
 EAPI="prefix"
 
@@ -23,11 +23,13 @@ KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos"
 
 IUSE="doc X"
 
-DEPEND="app-shells/tcsh
+RDEPEND="app-shells/tcsh
 	dev-lang/perl
 	media-libs/libpng
-	sys-devel/pmake
 	X? ( virtual/motif )"
+
+DEPEND="${RDEPEND}
+		sys-devel/pmake"
 
 #	mpi? ( virtual/mpi )
 
